--- a/manifest.json
+++ b/manifest.json
@@ -1,26 +1,30 @@
 {
-  "name": "whatJacket?",
+  "name": "whatJacket v0.8.2",
   "short_name": "whatJacket",
-  "description": "Weather-based clothing recommendations.",
+  "description": "Weather-based layered clothing recommendations.",
   "start_url": "/index.php",
   "display": "standalone",
   "background_color": "#f0e68c",
   "theme_color": "#007bff",
+  "orientation": "portrait-primary",
   "icons": [
     {
-      "src": "icon-192.png",
+      "src": "./img/icons/icon-192.png",
       "sizes": "192x192",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     },
     {
-      "src": "icon-512.png",
+      "src": "./img/icons/icon-512.png",
       "sizes": "512x512",
-      "type": "image/png"
+      "type": "image/png",
+       "purpose": "any maskable"
     },
-     {
-      "src": "apple-touch-icon.png",
+    {
+      "src": "./img/icons/apple-touch-icon.png",
       "sizes": "180x180",
-      "type": "image/png"
+      "type": "image/png",
+       "purpose": "any"
     }
   ]
 }
